<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MRDesktop Client</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connected">Connected</string>
    <string name="status_error">Connection Error</string>
    <string name="default_server_ip">192.168.1.100</string>
    <string name="default_server_port">8080</string>
</resources>